--- a/GreenGardenClient/GreenGardenClient/Views/Service/OrderGear.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/OrderGear.cshtml
@@ -437,6 +437,9 @@
                                             <div class="listing-item-content">
                                                 <h2 class="px-3 mb-1 category bg-primary">@item.RentalPrice.ToString("N0") ₫</h2>
                                                 <h2 class="mb-2">
+                                                    @item.GearName
+                                                </h2>
+                                                <h2 class="mb-2">
                                                     <p>Số lượng còn lại: <strong>@item.QuantityAvailable</strong></p>
                                                 </h2>
 
