--- a/GreenGardenClient/GreenGardenClient/Views/Service/OrderTicket.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/OrderTicket.cshtml
@@ -625,7 +625,7 @@
                                 {
                                     <div class="product-item" id="product-@item.TicketId">
                                         <div class="product-image">
-                                            <img src="~/images/logo.jpg" alt="Image" class="img-fluid">
+                                            <img src="~/images/@item.Price" alt="Image" class="img-fluid">
                                         </div>
                                         <div class="product-content">
                                             <h2><a href="@Url.Action("TripSingle", new { id = item.TicketId })">Vé @item.TicketName</a></h2>
