--- a/GreenGardenClient/GreenGardenClient/Views/Common/ResetPassword.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Common/ResetPassword.cshtml
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Sự kiện &mdash; GreenGarden</title>
+    <title>Quên mật khẩu &mdash; GreenGarden</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -107,7 +107,9 @@
                     <div class="col-3 ">
                         <div class="site-logo">
                             <a href="~/Home" class="font-weight-bold">
-                                <img src="~/images/newlogo.jpg" alt="Image" class="img-fluid" style="width: 55%; height: auto;">
+
+                                <img src="~/images/logo.jpg" alt="Image" class="img-fluid">
+
                             </a>
                         </div>
                     </div>
@@ -291,7 +293,7 @@
 
                             <div class="form-group">
                                 <label for="email">Email:</label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Nhập email của bạn" value="@Model?.Email">
+                                <input type="text" class="form-control" id="email" name="email" placeholder="Nhập email của bạn" value="@Model?.Email">
                             </div>
                             @if (ViewData.ModelState["EmailError"]?.Errors.Count > 0)
                             {
