--- a/GreenGardenClient/GreenGardenClient/Views/Common/Register.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Common/Register.cshtml
@@ -5,7 +5,7 @@
 <html lang="en">
 
 <head>
-    <title>Sự kiện &mdash; GreenGarden</title>
+    <title>Đăng kí &mdash; GreenGarden</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
