--- a/GreenGardenClient/GreenGardenClient/Views/FoodAndDrinkManagement/CreateFoodAndDrink.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/FoodAndDrinkManagement/CreateFoodAndDrink.cshtml
@@ -653,7 +653,7 @@
                         </div>
                         <!-- Nút submit -->
                         <div class="mt-4 d-flex justify-content-center">
-                            <button type="submit" class="btn btn-primary px-5 py-2">Thêm món ăn</button>
+                            <button onclick="return confirm('Bạn có chắc chắn muốn thêm đồ ăn, đồ uống không?')" type="submit" class="btn btn-primary px-5 py-2">Thêm món ăn</button>
                         </div>
                     </form>
                 </div>
