--- a/GreenGardenClient/GreenGardenClient/Views/TicketManagement/CreateTicket.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/TicketManagement/CreateTicket.cshtml
@@ -638,7 +638,7 @@
                         </div>
                         <!-- Nút submit -->
                         <div class="mt-4 d-flex justify-content-center">
-                            <button type="submit" class="btn btn-primary px-5 py-2">Thêm vé</button>
+                            <button onclick="return confirm('Bạn có chắc chắn muốn thêm vé không?')" type="submit" class="btn btn-primary px-5 py-2">Thêm vé</button>
                         </div>
                     </form>
 
