--- a/GreenGardenClient/GreenGardenClient/Views/GearManagement/CreateGear.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/GearManagement/CreateGear.cshtml
@@ -635,7 +635,7 @@
                         </div>
                         <!-- Nút submit -->
                         <div class="mt-4 d-flex justify-content-center">
-                            <button type="submit" class="btn btn-primary px-5 py-2">Thêm thiết bị</button>
+                            <button onclick="return confirm('Bạn có chắc chắn muốn thêm thiết bị không?')" type="submit" class="btn btn-primary px-5 py-2">Thêm thiết bị</button>
                         </div>
                     </form>
 
